--- a/client/public/import/search.css
+++ b/client/public/import/search.css
@@ -139,3 +139,9 @@ h4{
     height: 100px;
     border: 1px solid green;
 }
+.logined{
+    margin-top: 15px;
+    color: black;
+    font-size: 20px;
+    font-weight: 600;
+}
